--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Capstone_Kitchen</string>
+    <string name="order_history">Order History</string>
 </resources>
